2006-04-30  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-parse-value.cc: Update tests.

	* schroot/sbuild-keyfile.h (get_value): Catch exceptions thrown by
	parse errors and log a warning.

	* schroot/sbuild-environment.h (get): Catch exceptions thrown by
	parse errors and log a warning.

	* schroot/sbuild-parse-value.cc (parse_value): Add class
	constructor and destructor.
	(parse): Parse functions use this->value rather than a string
	value argument.

	* schroot/sbuild-parse-value.h: Move parse_value functions into
	the generic_value class as private parse methods; the string value
	is taken directly from this->value, rather than passed as an
	argument.  generic_value class renamed to parse_value.  On parse
	failure, an exception is thrown.

2006-04-29  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-keyfile.h: Update documentation.

2006-04-29  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed file repack item.

2006-04-29  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot-file.cc (chroot_file>): Check for
	CHROOT_FILE_REPACK in the environment.

2006-04-29  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document GCC portability.

	* test/Makefile.am (AM_CXXFLAGS): Remove -Wextra, for GCC 3.3/3.4
	portability.

	* schroot/sbuild-chroot-config.cc (load_data): Construct
	__gnu_cxx::stdio_filebuf appropriately, depending on the required
	construction semantics.

	* schroot/sbuild-chroot.cc (setup_session_info): Construct
	__gnu_cxx::stdio_filebuf appropriately, depending on the required
	construction semantics.

	* configure.ac: Check whether the old (GCC < 3.4) or new (GCC >=
	3.4) __gnu_cxx::stdio_filebuf construction semantics are required,
	for portability to older GCC versions.

2006-04-26  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/10mount (do_mount) : Create directories for
	mounting filesystems onto if they don't exist.

2006-04-26  Roger Leigh  <rleigh@debian.org>

	* po/POTFILES.in: Add schroot/sbuild-format-detail.h
